--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,3 +64,11 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+lsw_memcache:
+    session:
+        pool: default
+    pools:
+        default:
+            servers:
+              - { host: %memcache_server%, tcp_port: 11211 }
