--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "guzzle/guzzle": "^3.9"
+        "guzzle/guzzle": "^3.9",
+        "leaseweb/memcache-bundle": "^2.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
