--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -1,5 +1,10 @@
 parameters:
 services:
     kisiowall.caller.service:
-        class: AppBundle\Services\Caller
+        class: AppBundle\Services\KisioApiCaller
+    github.caller.service:
+        class: AppBundle\Services\GithubApiCaller
         arguments:
+          - @memcache.default
+    rooms.caller.service:
+        class: AppBundle\Services\AvailableRoomsCaller
