--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -4,6 +4,8 @@ services:
         class: AppBundle\Services\KisioApiCaller
         arguments:
           - @memcache.default
+          - %twitter_key%
+          - %twitter_secret%
     github.caller.service:
         class: AppBundle\Services\GithubApiCaller
         arguments:
